# MotionPatches

./: .gitignore  NOTICE.txt  README.md  pyproject.toml  requirements.txt
conf/: config.yaml  test_config.yaml
conf/dataset/: HumanML3D.yaml  KIT-ML.yaml
datasets/: __init__.py  dataset.py
models/: clip.py
scripts/: cal_mean_var.py  test.py  test_batch.py  train.py
